# comcom

./: .gitignore  AUTH_FLOW_DOCUMENTATION.md  Makefile  README.md  cspell.json  langgraph.sqlite-shm  langgraph.sqlite-wal  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
app/api/routes/: chat.py
app/core/: config.py  enums.py
app/graph/nodes/: classifier.py  error_handler.py  orchestrator.py  output_handler.py
app/graph/subgraphs/fallback/: __init__.py  graph.py
app/graph/subgraphs/initiate_payment/: graph.py
app/graph/subgraphs/payment_status/: graph.py
app/graph/subgraphs/place_order/: graph.py
app/graph/subgraphs/product_search/: graph.py
app/graph/workflows/: base.py
app/graph/workflows/auth_middleware/: README.md  graph.py  types.py
app/graph/workflows/order_management/: types.py
app/graph/workflows/product_search/: graph.py  types.py
app/graph/workflows/signin/: types.py
app/graph/workflows/signup/: types.py
app/models/: chat.py  classifier.py  user.py
app/services/: auth.py  auth_guard.py  auth_middleware.py  chat_history_state.py  jwt.py  llm.py  monitoring.py  password.py  resilience.py  state_validator.py  stream.py  workflow_state.py
app/services/db/: cart.py  db.py  order.py  product.py  seeder.py  user.py
app/types/: common.py
client/: TOOL_MESSAGES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  index.css
client/src/config/: index.ts
client/src/core/: event-emitter.ts
client/src/store/: chat-store.ts
client/src/types/: chat.ts
client/src/utils/: extraction.ts
(+115 files in other folders)
